--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -61,6 +61,7 @@ layout: default
       <h2>
         <a href="{{ '/publications/' | relative_url }}" style="color: inherit">publications</a>
       </h2>
+      {% comment %} selected publications {% endcomment %} 
       {% include selected_papers.liquid %}
     {% endif %}
 
@@ -74,3 +75,5 @@ layout: default
     {% endif %}
   </article>
 </div>
+
+
